updated docs & protos
