# api/handlers/project.go
@@ -1,0 +1,164 @@
+package handlers
+
+import (
+	"context"
+	"ucode/ucode_go_api_gateway/api/http"
+	"ucode/ucode_go_api_gateway/genproto/company_service"
+
+	"github.com/gin-gonic/gin"
+)
+
+// GetCompanyProjectById godoc
+// @Security ApiKeyAuth
+// @Param Resource-Id header string true "Resource-Id"
+// @ID get_company_project_id
+// @Router /v1/company-project/{project_id} [GET]
+// @Summary Get Project By Id
+// @Description Get Project By Id
+// @Tags Company Project
+// @Accept json
+// @Produce json
+// @Param project_id path string true "project_id"
+// @Param company_id query string false "company_id"
+// @Success 200 {object} http.Response{data=company_service.Project} "Company data"
+// @Response 400 {object} http.Response{data=string} "Invalid Argument"
+// @Failure 500 {object} http.Response{data=string} "Server Error"
+func (h *Handler) GetCompanyProjectById(c *gin.Context) {
+	projectId := c.Param("project_id")
+
+	resp, err := h.companyServices.ProjectService().GetById(
+		context.Background(),
+		&company_service.GetProjectByIdRequest{
+			ProjectId: projectId,
+			CompanyId: c.DefaultQuery("company_id", ""),
+		},
+	)
+
+	if err != nil {
+		h.handleResponse(c, http.GRPCError, err.Error())
+		return
+	}
+
+	h.handleResponse(c, http.OK, resp)
+}
+
+// GetCompanyProjectList godoc
+// @Security ApiKeyAuth
+// @Param Resource-Id header string true "Resource-Id"
+// @ID get_project_list
+// @Router /v1/company-project [GET]
+// @Summary Get all projects
+// @Description Get all projects
+// @Tags Company Project
+// @Accept json
+// @Produce json
+// @Param filters query company_service.GetProjectListRequest true "filters"
+// @Success 200 {object} http.Response{data=company_service.GetProjectListResponse} "Company data"
+// @Response 400 {object} http.Response{data=string} "Invalid Argument"
+// @Failure 500 {object} http.Response{data=string} "Server Error"
+func (h *Handler) GetCompanyProjectList(c *gin.Context) {
+
+	limit, err := h.getLimitParam(c)
+	if err != nil {
+		h.handleResponse(c, http.InvalidArgument, err.Error())
+		return
+	}
+
+	offset, err := h.getOffsetParam(c)
+	if err != nil {
+		h.handleResponse(c, http.InvalidArgument, err.Error())
+		return
+	}
+
+	resp, err := h.companyServices.ProjectService().GetList(
+		context.Background(),
+		&company_service.GetProjectListRequest{
+			Limit:     int32(limit),
+			Offset:    int32(offset),
+			Search:    c.DefaultQuery("search", ""),
+			CompanyId: c.DefaultQuery("company_id", ""),
+		},
+	)
+
+	if err != nil {
+		h.handleResponse(c, http.GRPCError, err.Error())
+		return
+	}
+
+	h.handleResponse(c, http.OK, resp)
+}
+
+// UpdateCompanyProject godoc
+// @Security ApiKeyAuth
+// @Param Resource-Id header string true "Resource-Id"
+// @ID update_project
+// @Router /v1/company-project/{project_id} [PUT]
+// @Summary Update Project
+// @Description Update Project
+// @Tags Company Project
+// @Accept json
+// @Produce json
+// @Param project_id path string true "project_id"
+// @Param Company body company_service.Project  true "CompanyProjectCreateRequest"
+// @Success 200 {object} http.Response{data=company_service.Project} "Company data"
+// @Response 400 {object} http.Response{data=string} "Bad Request"
+// @Failure 500 {object} http.Response{data=string} "Server Error"
+func (h *Handler) UpdateCompanyProject(c *gin.Context) {
+	projectId := c.Param("project_id")
+	var project company_service.Project
+
+	err := c.ShouldBindJSON(&project)
+	if err != nil {
+		h.handleResponse(c, http.BadRequest, err.Error())
+		return
+	}
+
+	resp, err := h.companyServices.ProjectService().Update(
+		context.Background(),
+		&company_service.Project{
+			ProjectId:    projectId,
+			CompanyId:    project.CompanyId,
+			Title:        project.Title,
+			K8SNamespace: project.K8SNamespace,
+		},
+	)
+
+	if err != nil {
+		h.handleResponse(c, http.GRPCError, err.Error())
+		return
+	}
+
+	h.handleResponse(c, http.OK, resp)
+}
+
+// DeleteCompanyProject godoc
+// @Security ApiKeyAuth
+// @Param Resource-Id header string true "Resource-Id"
+// @ID delete_project
+// @Router /v1/company-project/{project_id} [DELETE]
+// @Summary Delete Project
+// @Description Delete Project
+// @Tags Company Project
+// @Accept json
+// @Produce json
+// @Param project_id path string true "project_id"
+// @Success 204 {object} http.Response{data=string} "Data"
+// @Response 400 {object} http.Response{data=string} "Invalid Argument"
+// @Failure 500 {object} http.Response{data=string} "Server Error"
+func (h *Handler) DeleteCompanyProject(c *gin.Context) {
+	projectId := c.Param("project_id")
+
+	resp, err := h.companyServices.ProjectService().Delete(
+		context.Background(),
+		&company_service.DeleteProjectRequest{
+			ProjectId: projectId,
+		},
+	)
+
+	if err != nil {
+		h.handleResponse(c, http.GRPCError, err.Error())
+		return
+	}
+
+	h.handleResponse(c, http.NoContent, resp)
+}
